[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/art/Accessories.png" type="Texture" id=1]
[ext_resource path="res://assets/art/hats.png" type="Texture" id=2]
[ext_resource path="res://assets/art/shadow.png" type="Texture" id=3]
[ext_resource path="res://player/Body.gd" type="Script" id=4]
[ext_resource path="res://assets/art/hair.png" type="Texture" id=6]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/legs.png-34566671cd7ff8c2cdd99f87e6363f79.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/body.png-cf82373f3ccccc9382bb45d080b0e380.stex"

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/head.png-c0882a54acb888b879a0ce0a7733f560.stex"

[sub_resource type="Animation" id=4]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AccessoriesSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LegSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HairSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HatSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.56
loop = true
step = 0.035
tracks/0/type = "value"
tracks/0/path = NodePath("AccessoriesSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28, 0.315, 0.35, 0.385, 0.42, 0.455, 0.49, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HeadSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28, 0.315, 0.35, 0.385, 0.42, 0.455, 0.49, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28, 0.315, 0.35, 0.385, 0.42, 0.455, 0.49, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LegSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28, 0.315, 0.35, 0.385, 0.42, 0.455, 0.49, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HairSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28, 0.315, 0.35, 0.385, 0.42, 0.455, 0.49, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HatSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.035, 0.07, 0.105, 0.14, 0.175, 0.21, 0.245, 0.28, 0.315, 0.35, 0.385, 0.42, 0.455, 0.49, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
advance_condition = "walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
advance_condition = "not_walking"

[sub_resource type="AnimationNodeStateMachine" id=10]
states/idle/node = SubResource( 6 )
states/idle/position = Vector2( 185, 82 )
states/walk/node = SubResource( 7 )
states/walk/position = Vector2( 440, 82 )
transitions = [ "idle", "walk", SubResource( 8 ), "walk", "idle", SubResource( 9 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( -5.64927, 6.26102, 4.86726, 6.45944, 4.86726, 9.73346, -5.25242, 9.83267 )

[node name="Body" type="Node2D"]
script = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 8.0534 )
texture = ExtResource( 3 )

[node name="LegSprite" type="Sprite" parent="."]
texture = SubResource( 1 )
hframes = 25
region_enabled = true
region_rect = Rect2( 0, 0, 375, 18 )

[node name="BodySprite" type="Sprite" parent="."]
texture = SubResource( 2 )
hframes = 25
region_enabled = true
region_rect = Rect2( 0, 0, 375, 18 )

[node name="HeadSprite" type="Sprite" parent="."]
texture = SubResource( 3 )
hframes = 25
region_enabled = true
region_rect = Rect2( 0, 0, 375, 18 )

[node name="AccessoriesSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 25
region_enabled = true
region_rect = Rect2( 0, 0, 375, 18 )

[node name="HairSprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 25
region_enabled = true
region_rect = Rect2( 0, 0, 375, 18 )

[node name="HatSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 25
region_enabled = true
region_rect = Rect2( 0, 0, 375, 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )
parameters/conditions/not_walking = false
parameters/conditions/walking = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 12 )
